fix: various fixes for the branch
